--- a/sass/modules/_misc-layout.scss
+++ b/sass/modules/_misc-layout.scss
@@ -301,9 +301,13 @@ body#page-setup {
 	li {
 		display: inline-block;
 		font-size: 16px;
-		margin-right: 0.5em; // 8px / 16px
+		margin: 0 0.5em 0 0;
 		width: 1.5em; // 24px / 16px
 		height: 1.5em; // 24px / 16px
+
+        [dir="rtl"] & {
+			margin: 0 0 0 0.5em;
+		}
 	}
 
 	a {
